[gd_scene load_steps=9 format=3 uid="uid://cptgpxdn564ef"]

[ext_resource type="Script" uid="uid://dw3pmsepwpyr7" path="res://scripts/orb.gd" id="1_78bqe"]
[ext_resource type="Texture2D" uid="uid://dndexax0rcjfl" path="res://assets/Image_assets/sprites/ground.png" id="1_qnnq1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhc55"]
size = Vector2(9.09979, 9.58638)

[sub_resource type="CircleShape2D" id="CircleShape2D_bfll5"]
radius = 8.0

[sub_resource type="Animation" id="Animation_ekkw1"]
length = 2.5
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [132]
}

[sub_resource type="Animation" id="Animation_g4dh1"]
resource_name = "orb_animation"
length = 2.0
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [132, 133, 134, 135, 136, 137]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpxb4"]
_data = {
&"RESET": SubResource("Animation_ekkw1"),
&"orb_animation": SubResource("Animation_g4dh1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nkpf0"]
radius = 9.0

[node name="orb" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 16
collision_mask = 16
script = ExtResource("1_78bqe")

[node name="orb_detector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 16

[node name="collision_orb_detector" type="CollisionShape2D" parent="orb_detector"]
z_index = 2
position = Vector2(-1.90735e-06, 0)
scale = Vector2(13.615, 13.615)
shape = SubResource("RectangleShape2D_hhc55")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.68, 0.68)
texture = ExtResource("1_qnnq1")
hframes = 12
vframes = 12
frame = 132

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bfll5")
debug_color = Color(0.261869, 0.616001, 0.432039, 0.42)

[node name="Animation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_vpxb4")
}

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-19, -34)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(19, 34)
shape = SubResource("CircleShape2D_nkpf0")
debug_color = Color(0.894099, 0.284451, 0.387705, 0.42)

[connection signal="area_entered" from="orb_detector" to="." method="_on_orb_detector_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
